# eyerest-vscode-theme

./: .bumpversion.toml  .gitignore  .vscodeignore  CHANGELOG.md  LOGOS.md  Makefile  README.md  README.vsix.md  package.json  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: bump-and-release.yml  codeql.yml
assets/logos/: LOGOS.md
themes/: eyerest-amber-dark-color-theme.json  eyerest-amber-light-color-theme.json  eyerest-dark-color-theme.json  eyerest-dusk-dark-color-theme.json  eyerest-dusk-light-color-theme.json  eyerest-green-dark-color-theme.json  eyerest-green-light-color-theme.json  eyerest-light-color-theme.json
