[project]
name = "eyerest-vscode-theme"
version = "0.2.0"
description = "Eye-friendly VS Code themes for long sessions"

[tool.bumpversion]
current_version = "0.2.0"
commit = false
tag = false
allow_dirty = true
tag_name = "v{new_version}"
message = "bump: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "README.md"
search = "eyerest-vscode-theme-{current_version}.vsix"
replace = "eyerest-vscode-theme-{new_version}.vsix"

[[tool.bumpversion.files]]
filename = "README.md"
search = "version-{current_version}-58f4c2"
replace = "version-{new_version}-58f4c2"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]\n\n---"
replace = "## [Unreleased]\n\n---\n\n## [{new_version}] - {now:%Y-%m-%d}"
